crates/codira_codegen/src/snapshots/codira_codegen__test__nested_private_recursive_fn.snap
---
source: crates/codira_codegen/src/test.rs
assertion_line: 1045
expression: "\n    fn private_fn() -> f32 {\n        private_fn()\n    }\n\n    pub fn main() -> f32 {\n        private_fn()\n    }\n    "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x i64*]

define float @private_fn() {
body:
  %private_fn = call float @private_fn()
  ret float %private_fn
}

define float @main() {
body:
  %private_fn = call float @private_fn()
  ret float %private_fn
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x i64*] zeroinitializer

