crates/codira_codegen/src/snapshots/codira_codegen__test__private_fn_only.snap
---
source: crates/codira_codegen/src/test.rs
assertion_line: 1045
expression: "\n    fn private_main() {\n        let a = 1;\n    }\n    "

---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

define void @private_main() {
body:
  ret void
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

