crates/codira_codegen/src/snapshots/codira_codegen__test__shift_op_i128.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    pub fn leftshift(a: i128, b: i128) -> i128 { a << b }\n    pub fn rightshift(a: i128, b: i128) -> i128 { a >> b }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x i64*]

define i128 @leftshift(i128 %0, i128 %1) {
body:
  %left_shift = shl i128 %0, %1
  ret i128 %left_shift
}

define i128 @rightshift(i128 %0, i128 %1) {
body:
  %right_shift = ashr i128 %0, %1
  ret i128 %right_shift
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x i64*] zeroinitializer

