crates/codira_codegen/src/snapshots/codira_codegen__test__shift_op_i16.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    pub fn leftshift(a: i16, b: i16) -> i16 { a << b }\n    pub fn rightshift(a: i16, b: i16) -> i16 { a >> b }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x i64*]

define i16 @leftshift(i16 %0, i16 %1) {
body:
  %left_shift = shl i16 %0, %1
  ret i16 %left_shift
}

define i16 @rightshift(i16 %0, i16 %1) {
body:
  %right_shift = ashr i16 %0, %1
  ret i16 %right_shift
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x i64*] zeroinitializer

